--- a/styles/style.css
+++ b/styles/style.css
@@ -201,7 +201,6 @@ blockquote {
 .card__author {
     display: flex;
     width: 319px;
-    padding: 20px;
     flex-direction: column;
     gap: 8px;
 }
@@ -212,10 +211,10 @@ blockquote {
 }
 
 .card__title {
-    margin: 8px auto;
-    font-family: 'EB Garamond', serif;
+    margin-top: 8px;
+    font-family: 'EB Garamond';
     font-weight: 500;
-    font-size: 22 px;
+    font-size: 22px;
     line-height: 1.35;
 }
 
@@ -236,7 +235,7 @@ blockquote {
     flex-direction: column;
     align-items: flex-start;
     padding: 0;
-    gap: 32px;
+    gap: 8px;
 }
 
 
